tests/specs/ecosystem/olets/tailwindcss_fluid_font_size/2_0_0.test
olets/tailwindcss-fluid-font-size/2.0.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2304 [ERROR]: Cannot find name 'PluginWithOptions'.
 */ const fluidFontSize: PluginWithOptions = {} as never;
                         ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:11:26

